# alexander2

./: .gitignore  Dockerfile  README.md  api.py  app.py  auswertung.py  data.json  data2.json  env.ps1  env.sh  orders.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test.py  venv.ps1  wsgi.py
.github/workflows/: docker-image.yml
errors/: error.json  no_error.json
integration/: .env.example  .gitignore  composer.json  phpunit.xml
integration/app/Console/Commands/: DumbbotCommand.php  RandomCommands.php
integration/app/Utility/: GameService.php
integration/storage/app/: .gitignore
integration/tests/: TestCase.php
integration/tests/Feature/: BasicTestRunGenerationTest.php  ExampleTest.php  WinnerTest.php
service/: GameFormatter.py
test/: TestCase.php  composer.json  phpunit.xml
test/Integration/: InitialTest.php
tests/: test_applied_orders.py
